# cemu

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  Video.md  credits.md  imgui.ini  vcpkg.json
advance/rtl/: CMakeLists.txt  types.sv
advance/rtl/ARM7/: ALU.sv  BarrelShifter.sv  CMakeLists.txt  CPU.sv  ControlUnit.sv  Decoder.sv  control_types.sv  interface.sv  types.sv
advance/rtl/MMU/: CMakeLists.txt  interface.sv  types.sv
advance/rtl/cpu/: ALU.sv  BarrelShifter.sv  CMakeLists.txt  CPU.sv  ControlUnit.sv  Decoder.sv  control_types.sv  interface.sv  types.sv  util.sv  util.svh
advance/tests/: CMakeLists.txt  verilator_time.cpp
advance/tests/cpu/: CMakeLists.txt  MockMMU.sv  json_parser.cpp  json_parser.hpp  test_cpu.cpp
advance/tests/util/: CMakeLists.txt  util.cpp
cemu/: CMakeLists.txt  README.md
cemu/src/: address.cpp  address.hpp  definitions.hpp  gameboy.cpp  gameboy.hpp  main.cpp
cemu/src/cartridge/: CMakeLists.txt  cartridge_info.hpp
cemu/src/cpu/: opcodes.cpp  opcodes.hpp  register.hpp
cemu/src/io/: CMakeLists.txt  io.cpp  io.hpp
cemu/src/mmu/: mmu.cpp  mmu.hpp
cemu/src/ppu/: color.cpp  framebuffer.hpp  ppu.cpp  ppu.hpp
cemu/src/timer/: timer.cpp  timer.hpp
cemu/src/util/: bitops.hpp
cemu/tests/: CMakeLists.txt  mock_mmu.cpp
cores/gb/: CMakeLists.txt
cores/gb/rtl/: CMakeLists.txt  Gameboy.sv  Input.sv  Memory.sv  Serial.sv  Timer.sv  boot.svh  types.sv
cores/gb/scripts/: gen_control_words.py
cores/gb/sim/: CMakeLists.txt  Simulator.sv  gb.cpp  main.cpp
cores/gb/tests/: CMakeLists.txt
cores/gba/rtl/: CMakeLists.txt  GameboyAdvance.sv  types.sv
cores/gba/tests/: CMakeLists.txt  main.cpp
gb/tests/mooneye/: CMakeLists.txt
gba/: CMakeLists.txt
gba/planning/: pipeline.md
gba/rtl/: CMakeLists.txt
gba/rtl/cpu/: CMakeLists.txt  CPU.sv  ControlUnit.sv  Decoder.sv  control_types.sv  types.sv  util.sv  util.svh
gba/rtl/mmu/: CMakeLists.txt
gba/tests/cpu/: MockMMU.sv  arm_cpu_top.sv  test_cpu.cpp
gba/tests/util/: CMakeLists.txt  util.cpp
src/: CMakeLists.txt  address.hpp  apu.hpp  boot.hpp  cartridge.hpp  defines.hpp  gameboy.cpp  gameboy.hpp  io.hpp  main.cpp  options.hpp  timer.hpp  types.hpp
src/apu/: CMakeLists.txt
src/cartridge/: CMakeLists.txt  cartridge.cpp  cartridge.hpp  cartridge_info.cpp
src/cpu/: CMakeLists.txt  cpu.cpp  cpu.hpp  opcode_cycles.hpp  opcodes.cpp  opcodes.hpp  opcodes_cb.cpp  register.cpp  register.hpp
src/io/: serial.cpp  serial.hpp
src/mmu/: CMakeLists.txt  mmu.cpp  mmu.hpp
src/ppu/: CMakeLists.txt  color.hpp  framebuffer.cpp  ppu.cpp  ppu.hpp  tile.cpp  tile.hpp  tiles.cpp  tiles.hpp
src/timer/: CMakeLists.txt
src/util/: CMakeLists.txt  bitops.hpp  log.cpp  log.hpp  string_utils.cpp  string_utils.hpp
tests/: CMakeLists.txt  cpu_tb.sv  tb_main.cpp  test_cemu.cpp  test_opcodes.cpp
vemu/: CMakeLists.txt
vemu/builds/: CMakeLists.txt  common.f.in  gameboy.f.in
vemu/debug/: CMakeLists.txt
vemu/debug/include/: debugger.hpp  mem_write_info.hpp  mem_write_table.hpp  op_history.hpp  opcodes.hpp
vemu/debug/src/: debugger.cpp
vemu/debug/tests/: mem.cpp
vemu/debugger/: CMakeLists.txt
vemu/debugger/include/: mem_write_info.hpp  types.hpp
vemu/debugger/src/: debugger.cpp
vemu/debugger/tests/: CMakeLists.txt  instruction_access.hpp
vemu/scripts/: gen_control_words.py
vemu/sim/: CMakeLists.txt  debug.cpp  gb.cpp  gb.hpp  main.cpp
vemu/sim/include/: gbh.hpp  gpu.hpp
vemu/sim/src/: CMakeLists.txt  gbh.cpp  gpu.cpp
vemu/src/: CMakeLists.txt  Cartridge.sv  Gameboy.sv  Input.sv  Memory.sv  Serial.sv  Timer.sv  types.sv
vemu/src/cartridge/: CMakeLists.txt  Cartridge.sv
vemu/src/cpu/: ALU.sv  ALU.svh  CMakeLists.txt  CPU.sv  RAM.sv  alu_ops.svh  cb_control_words.sv  cb_control_words.svh  control_words.sv  control_words.svh  idu_ops.svh  interrupt_control_words.sv  interrupt_control_words.svh  opcodes.sv  opcodes.svh  types.sv  types.svh  util.sv  util.svh
vemu/src/mmu/: DMA.sv  MMU.sv  addresses.sv  addresses.svh  interface.sv  types.sv  types.svh  util.sv
vemu/src/ppu/: CMakeLists.txt  FIFO.sv  Fetcher.sv  Framebuffer.sv  Obj_FIFO.sv  Obj_Fetcher.sv  PPU.sv  SimplePPU.sv  interface.sv  types.sv  types.svh  util.sv
vemu/src/util/: logger.sv  logger.svh
vemu/tests/: CMakeLists.txt  main.cpp  test_opcodes.cpp  test_vemu_opcodes.cpp  top.sv  util.hpp  verilator_time.cpp
vemu/tests/blargg/: CMakeLists.txt  test_blargg.cpp
vemu/tests/blargh/: CMakeLists.txt  test_blargh.cpp
vemu/tests/cartridge/: CMakeLists.txt  cartridge_cpu_top.sv  cartridge_top.sv  test_cartridge.cpp  test_cartridge_integration.cpp
vemu/tests/cpp/: CMakeLists.txt  test_FIFO.cpp  util.hpp
vemu/tests/cpu/: CMakeLists.txt  MockMMU.sv  cpu_top.sv  test_cpu.cpp  test_sm83.cpp
vemu/tests/fetcher/: CMakeLists.txt  fetcher_top.sv  test_fetcher.cpp
vemu/tests/fifo/: CMakeLists.txt  test_fifo.cpp
vemu/tests/gbmicrotest/: CMakeLists.txt  test_gbmicrotest.cpp
vemu/tests/integration/: CMakeLists.txt  test_integration.cpp
vemu/tests/mmu/: CMakeLists.txt  top.sv
vemu/tests/mooneye/: CMakeLists.txt  test_mooneye.cpp
vemu/tests/ppu/: CMakeLists.txt  MockPPU.sv  ppu_top.sv  test_oam_scan.cpp  test_ppu.cpp  test_ppu.vlt  test_ppu_l2.cpp  test_sprites.cpp  types.hpp
vemu/tests/sv/: CMakeLists.txt  tb_main.cpp
vemu/tests/testbench/: CMakeLists.txt  tb_main.cpp
vemu/tests/util/: CMakeLists.txt  ppm.hpp  test_config.hpp  util.cpp  util.hpp
verilog/: CMakeLists.txt  Gameboy.sv  control_words.sv  cpu.sv  gameboy.sv  mmu.sv  opcodes.sv  reg_sel.sv  types.sv
verilog/cpu/: CMakeLists.txt  CPU.sv  opcodes.sv  util.sv
verilog/mmu/: CMakeLists.txt  MMU.sv
verilog/util/: CMakeLists.txt
vgb/rtl/: CMakeLists.txt  Input.sv
vgb/rtl/cartridge/: CMakeLists.txt  Cartridge.sv
vgb/rtl/cpu/: CMakeLists.txt  control_words.svh  interrupt_control_words.svh  util.svh
vgb/rtl/mmu/: CMakeLists.txt  MMU.sv
vgba/: CMakeLists.txt
vgba/rtl/: CMakeLists.txt  Gameboy.sv
vgba/rtl/cpu/: ALU.sv  BarrelShifter.sv  CPU.sv  ControlUnit.sv  util.svh  (+1 more)
vgba/tests/: CMakeLists.txt
(+176 files in other folders)
